[Offline pages] Selecting items requiring upgrade to public storage

This patch extends GetPagesTask to provide capability to select
items that need to be upgraded (to a new public storage).

This approach is much simpler and shorter than providing a dedicated
task, that would copy most of the GetPagesTask code.

Bug: 756890
Change-Id: Ib6e1822b2103fca3a3b8c0bc11713842fc7e7144